--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-streetview": "^1.1.1",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "web-vitals": "^2.1.4"
